scrollbar for buttons fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   padding:0;
   box-sizing:border-box;
 }
+*::-webkit-scrollbar{
+  display:none;
+}
 h1{
   margin-bottom: 20px;
 }
